# FastCCM

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
notebooks/: CCM results comparison.ipynb  FastCCM GPT-2 latent states data.ipynb  FastCCM computation speed test.ipynb  FastCCM computational efficiency test.ipynb  FastCCM usage examples.ipynb
scripts/: README.md  benchmark_batch_policy.py  benchmark_cpu_usage.py  benchmark_flat_arrays.py  benchmark_performance.py  benchmark_report.py  benchmark_roofline.py  benchmark_simplex_target_batch_policy.py  benchmark_single_series_self_prediction.py
src/FastCCM/: CCM.py  CCM_utils.py  __init__.py
src/FastCCM/data/: __init__.py  data_loader.py
src/FastCCM/utils/: __init__.py  utils.py
src/fastccm/: __init__.py  _version.py  ccm.py  ccm_utils.py
src/fastccm/data/: __init__.py  data_loader.py
src/fastccm/utils/: __init__.py  logger.py  metrics.py  runtime.py  utils.py
src/manifold_learning.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_time_ccm.py
