[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "FastCCM"
dynamic = ["version"]
description = "A package for optimized Convergent Cross Mapping using PyTorch."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Iaroslav Korobov" }]

dependencies = [
  "torch==2.3.1",
  "numpy>=1.23",
  "scipy>=1.10",
  "matplotlib>=3.5",
  "pandas>=2.0",
  "scikit-learn>=1.3",
]

[project.urls]
Homepage = "https://github.com/z7743/FastCCM"
Issues = "https://github.com/z7743/FastCCM/issues"

[tool.setuptools.dynamic]
version = { attr = "fastccm._version.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"